# omero-bridge

./: README.md  app.py  pyproject.toml
.arkitekt/: builds.yaml  deployments.yaml  manifest.yaml
.arkitekt/flavours/vanilla/: Dockerfile
